kubernetes/overlay/dev/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-riskmap
spec:
  selector:
    matchLabels:
      app: api-riskmap
  template:
    metadata:
      labels:
        app: api-riskmap
    spec:
      containers:
      - name: primary
        resources:
          limits:
            memory: 1024Mi
            cpu: 1
          requests:
            memory: 512Mi
            cpu: 0.5
